--- a/helm/system-healthcheck/templates/daemonset.yaml
+++ b/helm/system-healthcheck/templates/daemonset.yaml
@@ -14,6 +14,16 @@ spec:
         app: {{ .Values.service.name }} 
         visualize: "true"
     spec:
+      tolerations:
+      # Making sure that system-hc will be scheduled on dedicated nodes for kafka and mongo
+      - key: "dedicated"
+        operator: "Equal"
+        value: "kafka"
+        effect: "NoSchedule"
+      - key: "dedicated"
+        operator: "Equal"
+        value: "mongo"
+        effect: "NoSchedule"
       containers:
       - name: {{ .Values.service.name }} 
         image: {{ .Values.image.repository }}:{{ .Chart.Version }}
