--- a/helm/system-healthcheck/templates/daemonset.yaml
+++ b/helm/system-healthcheck/templates/daemonset.yaml
@@ -17,6 +17,8 @@ spec:
       # ensure that sys-hc will be deployed to all nodes
       tolerations:
       - operator: "Exists"
+      updateStrategy:
+      - type: RollingUpdate
       containers:
       - name: {{ .Values.service.name }} 
         image: {{ .Values.image.repository }}:{{ .Chart.Version }}
