Set updateStrategy with correct syntax

--- a/helm/system-healthcheck/templates/daemonset.yaml
+++ b/helm/system-healthcheck/templates/daemonset.yaml
@@ -9,7 +9,7 @@ spec:
     matchLabels:
       app: {{ .Values.service.name }} 
   updateStrategy:
-  - type: RollingUpdate
+    type: "RollingUpdate"
   template:
     metadata:
       labels:
