--- a/helm/system-healthcheck/templates/daemonset.yaml
+++ b/helm/system-healthcheck/templates/daemonset.yaml
@@ -29,6 +29,12 @@ spec:
         env:
         - name: SYS_HC_HOST_PATH
           value: {{ .Values.env.system_hc_host_path }}
+        - name: AWS_EBS_MOUNTS_PATH
+          value: {{ .Values.env.aws_ebs_mounts_path }}
+        - name: MOUNTS_THRESHOLD
+          value: "{{ .Values.env.mounts_threshold }}"
+        - name: ROOT_DISK_THRESHOLD
+          value: "{{ .Values.env.root_disk_threshold }}"
         - name: NTP_TIME_DRIFT
           value: {{ .Values.env.ntp_time_drift }}
         - name: NTP_POLLING_PERIOD
