--- a/helm/system-healthcheck/values.yaml
+++ b/helm/system-healthcheck/values.yaml
@@ -12,8 +12,8 @@ image:
 env:
     system_hc_host_path: "host_dir"
     aws_ebs_mounts_path: "/var/lib/kubelet/plugins/kubernetes.io/aws-ebs/mounts/aws"
-    mounts_threshold: "10"
-    root_disk_threshold: "20"
+    mounts_threshold_percent: "10"
+    root_disk_threshold_percent: "20"
     ntp_time_drift: "2s"
     ntp_polling_period: "1m"
 volumes:
