--- a/helm/system-healthcheck/templates/daemonset.yaml
+++ b/helm/system-healthcheck/templates/daemonset.yaml
@@ -1,26 +1,30 @@
+{{- if .Values.eksCluster }}
+apiVersion: apps/v1
+{{- else }}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: DaemonSet
 metadata:
-  name: {{ .Values.service.name }} 
+  name: {{ .Values.service.name }}
   labels:
-    app: {{ .Values.service.name }} 
+    app: {{ .Values.service.name }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.service.name }} 
+      app: {{ .Values.service.name }}
   updateStrategy:
     type: "RollingUpdate"
   template:
     metadata:
       labels:
-        app: {{ .Values.service.name }} 
+        app: {{ .Values.service.name }}
         visualize: "true"
     spec:
       # ensure that sys-hc will be deployed to all nodes
       tolerations:
       - operator: "Exists"
       containers:
-      - name: {{ .Values.service.name }} 
+      - name: {{ .Values.service.name }}
         image: {{ .Values.image.repository }}:{{ .Chart.Version }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         volumeMounts:
