--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,17 @@
 version: 2.1
 orbs:
   ft-golang-ci: financial-times/golang-ci@1
-jobs:
-  build:
-    working_directory: /coco-system-healtcheck
-    docker:
-      - image: golang:1.10
-        environment:
-          CIRCLE_TEST_REPORTS: /tmp/test-results
-          CIRCLE_COVERAGE_REPORT: /tmp/coverage-results
-    steps:
-      - checkout
-      - ft-golang-ci/build
-      - ft-golang-ci/lint
-      - ft-golang-ci/test
 
 workflows:
   test-and-build-docker:
     jobs:
-      - build
+      - ft-golang-ci/build-and-test:
+          name: build-and-test-project
       - ft-golang-ci/docker-build:
           name: build-docker-image
           requires:
-            - build
+            - build-and-test-project
+
   snyk-scanning:
     jobs:
       - ft-golang-ci/scan:
